# shellai

./: .gitignore  README.md  pyproject.toml
src/ai_cli/: __init__.py  main.py  myai.ps1  shell-ai.ps1
