[project]
name = "shellai"
version = "1.0.0"
description = "AI-powered CLI command generator and executor"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ai = "ai_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cli"]
force-include = { "src/ai_cli/shell-ai.ps1" = "ai_cli/shell-ai.ps1" }
